--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="content">
       <div id="home">
         <p>My name is LIU Yijiang, and I am currently a fourth-year student majoring in Computer Science. I have a strong interest in programming, artificial intelligence, and web development. In my free time, I enjoy playing computer games and football, which help me relax and develop teamwork and strategic thinking. In the future, I aspire to work in the game development industry and contribute to creating exciting and immersive gaming experiences.</p>
-        <img src="1.jpg" alt="My Picture" style="width: 40%; height: auto; max-height: 600px; display: block; margin: 20px auto;">
+       <img src="1.jpg" alt="My Picture" style="width: 300px; height: 450px; object-fit: cover; display: block; margin: 20px auto;">
       </div>
 
       <div id="portfolio" style="display:none;">
