--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@
 
     <div class="content">
       <div id="home">
-        <p>My name is LIU Yijiang, and I am currently a fourth-year student majoring in Computer Science. I have a strong interest in programming, artificial intelligence, and web development. In my free time, I enjoy playing computer games and football, which help me relax and develop teamwork and strategic thinking. In the future, I aspire to work in the game development industry and contribute to creating exciting and immersive gaming experiences.</p>
-       <img src="1.jpg" alt="My Picture" style="width: auto; height: 500px; max-width: 100%; display: block; margin: 20px auto;">
-
+        <div style="margin-top: 0;"><p>My name is LIU Yijiang, and I am currently a fourth-year student majoring in Computer Science. I have a strong interest in programming, artificial intelligence, and web development. In my free time, I enjoy playing computer games and football, which help me relax and develop teamwork and strategic thinking. In the future, I aspire to work in the game development industry and contribute to creating exciting and immersive gaming experiences.</p></div>
+        <div style="margin-top: 20px;"><img src="1.jpg" alt="My Picture" style="width: 280px; height: 420px; object-fit: cover; display: block; margin: 20px auto 0 auto;"></div>
       </div>
 
       <div id="portfolio" style="display:none;">
