--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </form>
     </div>
   </div>
-  <div class="footer">Created: [Date] | <a href="https://yourblog.com">Blog</a></div>
+  <div class="footer">Created: 2025-07-19 | <a href="https://www.instagram.com/barwickholcomb354/">Blog</a></div>
 </body>
 </html>
 <!-- partial -->
